Commit state as of July 2025.